--- a/build.gradle
+++ b/build.gradle
@@ -32,13 +32,13 @@ ext {
     //dependencies version
     appCompatVersion = '1.1.0'
     constraintLayoutVersion = '1.1.3'
-    junitVersion = '4.12'
-    espressoVersion = '3.1.0'
+    junitVersion = '4.13'
+    espressoVersion = '3.2.0'
 
     materialVersion = '1.1.0'
     recyclerViewVersion = '1.1.0'
     glideVersion = '4.11.0'
-    archLifecycleVersion = '2.2.0'
+    archLifecycleVersion = '2.1.0'
 
     androidXTestVersion = '1.2.0'
     butterKnifeVersion = '10.2.1'
@@ -46,6 +46,10 @@ ext {
     gsonVersion = '2.8.6'
     converterGsonVersion = '2.7.0'
     retrofitVersion = '2.7.1'
+
+    idleResourceVersion = '3.2.0'
+
+    mockitoVersion = '3.1.0'
 
 
 }
